GNOME Bugzilla – Bug 796724
GstRTSPMediaFactory leaks clock property
Last modified: 2018-07-12 18:12:54 UTC
GstRTSPMediaFactory does not unref priv->clock
Created attachment 372895 [details] [review] media-factory: Unref clock
Thanks! commit 7f7a210b84025dd01af4f0b1d0c4bfa9eb1c6603 (HEAD -> master) Author: Tim-Philipp Müller <tim@centricular.com> Date: Thu Jul 12 19:01:54 2018 +0100 media-factory: unref old clock when setting new clock https://bugzilla.gnome.org/show_bug.cgi?id=796724 commit f304096994c5ee728c9cb0c97817a07596ddcd6a Author: Brendan Shanks <brendan.shanks@teradek.com> Date: Fri Jun 29 15:20:57 2018 -0700 media-factory: unref clock in finalize https://bugzilla.gnome.org/show_bug.cgi?id=796724