media-factory: unref clock in finalize

https://bugzilla.gnome.org/show_bug.cgi?id=796724